Melhorado a transição das telas e retirado o erro que ocorria ao visualizar muitas imagens ao faze o slide

--- a/app/src/main/res/layout/item_recycler_category.xml
+++ b/app/src/main/res/layout/item_recycler_category.xml
@@ -16,6 +16,7 @@
         android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/categoryThumb"
+            android:transitionName="img"
             android:scaleType="centerInside"
             android:padding="5dp"
             android:src="@drawable/sample_image_category"
